# pkgrep

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  justfile  lefthook.yml  mise.toml
.dev/: check_no_mocks.sh
.dev/azurite/: docker-compose.yml  init-container.sh
.dev/seaweedfs/: docker-compose.yml  init-bucket.sh  s3.json
.github/: dependabot.yml
.github/workflows/: ci.yml  homebrew-tap.yml  release.yml
fixtures/js/: package-lock.json  pnpm-lock.yaml
scripts/: install-skill.sh
skills/pkgrep-usage/: SKILL.md
skills/pkgrep-usage/agents/: openai.yaml
skills/pkgrep-usage/references/: commands.md
src/: cli.rs  config.rs  depspec.rs  error.rs  index.rs  installed_version.rs  logging.rs  main.rs  registry_resolver.rs  source.rs
src/commands/: add.rs  cache.rs  init.rs  list.rs  mod.rs  path.rs  pull.rs  remove.rs  self_update.rs  skill.rs
src/providers/: mod.rs  npm_package_lock.rs  pnpm_lock.rs  python_uv_lock.rs  rust_cargo_lock.rs  yarn_lock.rs
src/remote_cache/: mod.rs  object_store.rs
tests/: cli_integration.rs  remote_cache_e2e.rs
