[package]
name = "pkgrep"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
opendal = { version = "0.55.0", features = ["services-s3", "services-azblob"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
proptest = "1.9.0"
tempfile = "3.25.0"
testcontainers = { version = "0.27.1", features = ["blocking"] }
