[package]
name = "pkgrep"
version = "0.7.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
sha2 = "0.11.0"
tar = "0.4.45"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.3"
proptest = "1.11.0"
tempfile = "3.27.0"
